# Rock-Node

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pre-commit-install.sh  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  PRODUCTION_READINESS_ANALYSIS.md  README-DEV.md  README.md  clippy.toml  codecov.yml  docker-compose.yaml  nginx.conf  rock_node_context.md  rock_node_implementation_plan.md  rock_node_tracker.md  rustfmt.toml
.cursor/rules/: rules.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  task_chore.yml
.github/workflows/: code-quality.yml  compile-and-run.yml  e2e-tests.yml  unit-tests.yml
app/rock-node/: Cargo.toml
app/rock-node/src/: main.rs
config/: config.e2e.toml  config.toml  development.toml
crates/rock-node-backfill-plugin/: Cargo.toml
crates/rock-node-backfill-plugin/examples/: backfill_continious_mode.rs  external_block_stream.rs
crates/rock-node-backfill-plugin/src/: lib.rs  worker.rs
crates/rock-node-block-access-plugin/: Cargo.toml
crates/rock-node-block-access-plugin/src/: lib.rs  service.rs
crates/rock-node-core/: Cargo.toml
crates/rock-node-core/src/: app_context.rs  block_reader.rs  block_writer.rs  cache.rs  capability.rs  config.rs  database.rs  database_provider.rs  error.rs  events.rs  lib.rs  metrics.rs  plugin.rs  service_provider.rs  state_reader.rs  test_utils.rs
crates/rock-node-ingress-plugin/: Cargo.toml
crates/rock-node-observability-plugin/: Cargo.toml
crates/rock-node-observability-plugin/src/: lib.rs
crates/rock-node-persistence-plugin/: Cargo.toml
crates/rock-node-persistence-plugin/src/: hot_tier.rs  lib.rs  service.rs  state.rs  storage.rs
crates/rock-node-persistence-plugin/src/cold_storage/: archiver.rs  mod.rs  reader.rs  writer.rs
crates/rock-node-protobufs/: Cargo.toml  build.rs
crates/rock-node-protobufs/src/: lib.rs
crates/rock-node-publish-plugin/: Cargo.toml
crates/rock-node-publish-plugin/src/: lib.rs  service.rs  session_manager.rs  state.rs
crates/rock-node-query-plugin/: Cargo.toml
crates/rock-node-query-plugin/src/: lib.rs  plugin.rs  service.rs
crates/rock-node-query-plugin/src/handlers/: consensus_handler.rs  contract_handler.rs  crypto_handler.rs  file_handler.rs  mod.rs  network_handler.rs  schedule_handler.rs  token_handler.rs
crates/rock-node-query-plugin/src/services/: consensus_service.rs  contract_service.rs  crypto_service.rs  file_service.rs  mod.rs  network_service.rs  schedule_service.rs  token_service.rs
crates/rock-node-server-status-plugin/: Cargo.toml
crates/rock-node-server-status-plugin/src/: lib.rs  service.rs
crates/rock-node-state-management-plugin/: Cargo.toml
crates/rock-node-state-management-plugin/src/: lib.rs  plugin.rs  state_manager.rs
crates/rock-node-subscribe-plugin/: Cargo.toml
crates/rock-node-subscriber-plugin/: Cargo.toml
crates/rock-node-subscriber-plugin/src/: error.rs  lib.rs  service.rs  session.rs
crates/rock-node-verifier-plugin/: Cargo.toml
crates/rock-node-verifier-plugin/src/: lib.rs
data/cold_storage/: blocks-0000003800-0000003899.rba  blocks-0000003800-0000003899.rbi
data/persistence/: 000008.sst  IDENTITY  LOG  LOG.old.1750236976953926  LOG.old.1750238144389454  LOG.old.1750238547940286  LOG.old.1750238583312007  LOG.old.1750238765225725  LOG.old.1750238796363577  LOG.old.1750238846138801  LOG.old.1750238937137652  LOG.old.1750239377110498  LOG.old.1750239408853836  LOG.old.1750239988421348  LOG.old.1750240069018103  LOG.old.1750240182630902  LOG.old.1750240257960500  LOG.old.1750241487363785  LOG.old.1750241734979144  LOG.old.1750241911226008  LOG.old.1750242578371998  LOG.old.1750242864034590  LOG.old.1750243434214798  LOG.old.1750243858206463  LOG.old.1750244295965343  LOG.old.1750246753863860  LOG.old.1750246904043067  LOG.old.1750247818397078  LOG.old.1750248140587907  LOG.old.1750248555816137  LOG.old.1750248991245013  LOG.old.1750249224544300  LOG.old.1750249377584871  MANIFEST-000126  OPTIONS-000124
docs/: CONFIGURATION.md  README.md  known-issues.md  registry-isolation.md
docs/backfill/: design-doc.md
docs/benchmarks/: benchmark.md
docs/block-access/: design-doc.md
docs/ingress/: design-doc.md
docs/persistence/: design-doc.md
docs/protobufs/: protobufs-compilation.md
docs/publisher/: design-doc.md
docs/query/: design-doc.md
loki/: loki-config.yml
prometheus/: prometheus.yml
tests/e2e/: Cargo.toml  Dockerfile.e2e
tests/e2e/src/: common.rs  lib.rs
tests/e2e/src/common/: block_builder.rs
tests/e2e/src/tests/: backfill_resilience_suite.rs  backfill_suite.rs  block_access_suite.rs  gap_ingestion_suite.rs  health_check.rs  ingestion_suite.rs  mod.rs  query_suite.rs  resiliency_suite.rs  server_status_suite.rs  subscription_suite.rs
tests/e2e/src/tests/query_suites/: consensus_service_suite.rs  contract_service_suite.rs  crypto_service_suite.rs  file_service_suite.rs  mod.rs  network_service_suite.rs  schedule_service_suite.rs  token_service_suite.rs
tests/integration/: Cargo.toml  README.md
tests/integration/data/cold_storage/: blocks-0000000001-0000000010.rba  blocks-0000000001-0000000010.rbi  blocks-0000000011-0000000020.rba  blocks-0000000011-0000000020.rbi  blocks-0000000021-0000000030.rba  blocks-0000000021-0000000030.rbi  blocks-0000000031-0000000040.rba  blocks-0000000031-0000000040.rbi  blocks-0000000041-0000000050.rba  blocks-0000000041-0000000050.rbi  blocks-0000000051-0000000060.rba  blocks-0000000051-0000000060.rbi  blocks-0000000061-0000000070.rba  blocks-0000000061-0000000070.rbi  blocks-0000000071-0000000080.rba  blocks-0000000071-0000000080.rbi  blocks-0000000081-0000000090.rba  blocks-0000000081-0000000090.rbi  blocks-0000000091-0000000100.rba  blocks-0000000091-0000000100.rbi
tests/integration/src/: lib.rs
tests/integration/src/fixtures/: mock_plugins.rs  mod.rs  test_context.rs  test_data.rs
tests/integration/src/tests/: end_to_end_workflows.rs  event_flow.rs  mod.rs  plugin_lifecycle.rs  publish_persist_flow.rs  shared_resources.rs
(+18 files in other folders)
