[workspace]
resolver = "2"
members = [
    "app/rock-node",
    "crates/rock-node-core",
    "crates/rock-node-protobufs",
    "crates/rock-node-persistence-plugin",
    "crates/rock-node-verifier-plugin",
    "crates/rock-node-observability-plugin",
    "crates/rock-node-publish-plugin",
    "crates/rock-node-subscriber-plugin",
    "crates/rock-node-state-management-plugin",
    "crates/rock-node-query-plugin",
    "crates/rock-node-backfill-plugin",
    "tests/e2e",
    "tests/integration"
]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.13.1", features = ["transport"] }
prost = "0.13.5"
config = "0.14"  # Updated to avoid unmaintained yaml-rust
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }  # Fix RUSTSEC-2025-0055
slab = "0.4.11"  # Fix RUSTSEC-2025-0047
