[package]
name = "rock-node-backfill-plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core application types and traits
rock-node-core = { path = "../rock-node-core" }
rock-node-protobufs = { path = "../rock-node-protobufs" }

# Async runtime and gRPC
tokio = { version = "1", features = ["full"] }
tonic = "0.13.1"
tokio-stream = "0.1"

# For easy error handling
anyhow = "1"

# For structured logging
tracing = "0.1"

# For async traits
async-trait = "0.1"

# The subscriber that collects and prints logs
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# For metrics
prometheus = "0.14"

# For RocksDB access
rocksdb = "0.22"
rand = "0.9"
futures-util = "0.3"

[dev-dependencies]
tempfile = "3.20"
futures = "0.3"
