[package]
name = "rock-node-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
anyhow = "1" 

# For generating unique "Claim Check" keys
uuid = { version = "1", features = ["v4"] }

# A high-performance, concurrent hash map for our shared cache
dashmap = "5.5"
