[package]
name = "rock-node-persistence-plugin"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Required for the plugin system and core types
rock-node-core = { path = "../rock-node-core" }
rock-node-protobufs = { path = "../rock-node-protobufs" }
prost = "0.12"

# Async runtime and utilities
tokio = { version = "1", features = ["full"] }

# For structured logging
tracing = "0.1"

# For easy error handling
anyhow = "1"

# For the hot-tier key-value store
rocksdb = "0.22"

# For binary serialization of data into the DB
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# For using the cache_key from core events
uuid = { version = "1", features = ["v4"] }
