[package]
name = "rock-node-persistence-plugin"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Required for the plugin system and core types
rock-node-core = { path = "../rock-node-core" }
rock-node-protobufs = { path = "../rock-node-protobufs" }
prost = "0.13.5"

# Async runtime and utilities
tokio = { version = "1", features = ["full"] }

# For structured logging
tracing = "0.1"

# For easy error handling
anyhow = "1"

# For the hot-tier key-value store
rocksdb = "0.22"

# For binary serialization of data into the DB
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# For using the cache_key from core events
uuid = { version = "1", features = ["v4"] }

# A high-performance, concurrent hash map
dashmap = "5.5"

# For compression
zstd = "0.13"

# For memory-mapped files
memmap2 = "0.9"

# For parsing cold storage filenames
lazy_static = "1.4.0"
regex = "1.10"

# Add async-trait for async methods in traits
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
prometheus = "0.14"
