# File: rock-node-workspace/crates/rock-node-protobufs/Cargo.toml
[package]
name = "rock-node-protobufs"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.13.1"
prost = "0.13.5"

# Add serde as a dependency for the generated structs
serde = { version = "1", features = ["derive"] }

[build-dependencies]
tonic-build = { version = "0.13.1", features = ["prost"] }
anyhow = "1"
walkdir = "2"
fs_extra = "1.3"
