# File: rock-node-workspace/crates/rock-node-publish-plugin/Cargo.toml

[package]
name = "rock-node-publish-plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
rock-node-core = { path = "../rock-node-core" }
rock-node-protobufs = { path = "../rock-node-protobufs" }

# Async runtime and utilities
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures-util = "0.3"

# gRPC library
tonic = "0.11"

# For easy error handling
anyhow = "1"

# For logging
tracing = "0.1"

# For unique session IDs
uuid = { version = "1", features = ["v4"] }

# For concurrent hash maps
dashmap = "5.5"
