[package]
name = "rock-node-server-status-plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
rock-node-core = { path = "../rock-node-core" }
rock-node-protobufs = { path = "../rock-node-protobufs" }

# Async runtime and gRPC
tokio = { version = "1", features = ["full"] }
tonic = "0.13.1"

# For easy error handling
anyhow = "1"

# For logging
tracing = "0.1"
