[package]
name = "rock-node-verifier-plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
rock-node-core = { path = "../rock-node-core" }
rock-node-protobufs = { path = "../rock-node-protobufs" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
uuid = "1"
prost = "0.13"

# Add async-trait for async methods in traits
async-trait = "0.1"
