[package]
name = "e2e"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
testcontainers = "0.24"
rock-node-protobufs = { path = "../../crates/rock-node-protobufs" }
tonic = { version = "0.13.1", features = ["transport", "codegen"] }
