[package]
name = "e2e"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
testcontainers = "0.24"
rock-node-protobufs = { path = "../../crates/rock-node-protobufs" }
tonic = { version = "0.13.1", features = ["transport", "codegen"] }
prost = "0.13.5"
tokio-stream = "0.1"
once_cell = "1"
serial_test = "2"
